--- a/init/common-snmpd.conf
+++ b/init/common-snmpd.conf
@@ -1,3 +1,5 @@
-agentx
-agentXPerms 0777 0777 Debian-snmp Debian-snmp
-rocommunity public
+# Net-SNMP (master agent) listening on UDP/161 + AgentX enabled
+agentaddress udp:161
+rocommunity public default
+master agentx
+agentXSocket /var/agentx/master
