--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,20 @@
 name: lab-net
 
+# docker-compose.yml 置き換え案（lab-net最適化）
+x-tmpfs: &ephemeral_logs
+  tmpfs:
+    - /var/log
+    - /tmp
+    - /var/tmp
+
+# 必要になった時だけ使えるローテ設定（デフォルトは未使用）
+x-logging-rotated: &logging_rotated
+  logging:
+    driver: json-file
+    options:
+      max-size: "10m"
+      max-file: "3"
+
 services:
   r1:
     build:
@@ -8,21 +23,24 @@ services:
     container_name: r1
     hostname: r1
     init: true
+    restart: unless-stopped
+    stop_grace_period: 2s
     cap_add: ["NET_ADMIN", "NET_RAW", "SYS_ADMIN"]
     security_opt: ["no-new-privileges:false"]
     ports:
-      - "10161:161/udp"   # SNMP → r1
+      - "10161:161/udp"
     environment:
       - MY_ASN=65001
       - PEER_ASN=65002
       - SNMP_ROCOMMUNITY=public
-      # - PEER_IP=172.19.0.2
-      # - ADVERTISE_PREFIXES=10.0.1.0/24,10.0.3.0/24
     command: ["/init/r1-init.sh"]
     logging:
-      driver: "none"   # ログ抑止（ラボ運用向け）   [oai_citation:2‡docker-compose.yml](file-service://file-LhJP1qFkqF4M67gcGiCrfe)
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
+    <<: *ephemeral_logs
     networks: [mgmtnet]
-
   r2:
     build:
       context: .
@@ -30,19 +48,23 @@ services:
     container_name: r2
     hostname: r2
     init: true
+    restart: unless-stopped
+    stop_grace_period: 2s
     cap_add: ["NET_ADMIN", "NET_RAW", "SYS_ADMIN"]
     security_opt: ["no-new-privileges:false"]
     ports:
-      - "20161:161/udp"   # SNMP → r2
+      - "20161:161/udp"
     environment:
       - MY_ASN=65002
       - PEER_ASN=65001
       - SNMP_ROCOMMUNITY=public
-      # - PEER_IP=172.19.0.3
-      # - ADVERTISE_PREFIXES=10.0.2.0/24
     command: ["/init/r2-init.sh"]
     logging:
-      driver: "none"   # ログ抑止   [oai_citation:3‡docker-compose.yml](file-service://file-LhJP1qFkqF4M67gcGiCrfe)
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
+    <<: *ephemeral_logs
     networks: [mgmtnet]
 
   l2a:
@@ -50,11 +72,14 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: l2a
+    init: true
+    restart: unless-stopped
+    stop_grace_period: 2s
     cap_add: ["NET_ADMIN"]
     command: ["bash","-lc","/init/l2-init.sh || true; sleep infinity"]
-    restart: unless-stopped
     logging:
-      driver: "none"   # ログ抑止（巨大化防止）
+      driver: "none"
+    <<: *ephemeral_logs
     networks: [mgmtnet, vlan10, vlan20]
 
   l2b:
@@ -62,11 +87,17 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: l2b
+    init: true
+    restart: unless-stopped
+    stop_grace_period: 2s
     cap_add: ["NET_ADMIN"]
     command: ["bash","-lc","/init/l2-init.sh || true; sleep infinity"]
-    restart: unless-stopped
     logging:
-      driver: "none"
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
+    <<: *ephemeral_logs
     networks: [mgmtnet, vlan10, vlan20]
 
   h10:
@@ -74,10 +105,13 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: h10
-    command: ["bash","-lc","/init/h10-init.sh || true; sleep infinity"]
+    init: true
     restart: unless-stopped
+    stop_grace_period: 2s
+    command: ["bash","-lc","/init/h10-init.sh || true; sleep infinity"]
     logging:
       driver: "none"
+    <<: *ephemeral_logs
     networks: [vlan10]
 
   h20:
@@ -85,10 +119,16 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: h20
-    command: ["bash","-lc","/init/h20-init.sh || true; sleep infinity"]
+    init: true
     restart: unless-stopped
+    stop_grace_period: 2s
+    command: ["bash","-lc","/init/h20-init.sh || true; sleep infinity"]
     logging:
-      driver: "none"
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
+    <<: *ephemeral_logs
     networks: [vlan20]
 
 networks:
